@@ -1,3 +1,8 @@
+2002-10-31  Stefan Petersen  <spe@stacken.kth.se>
+
+	* src/gerber.c: Yet another commando that doesn't complain if 
+	  default values are given. AS is the lucky one this time.
+
 2002-10-31  Anders Eriksson  <anders@umunet.org>
 
 	* src/gerbv.c: Replace incremental redraw with clipping
@@ -9,7 +14,7 @@
 
 	* src/gerb_image.h, src/gerber.c: Implemented %SF% and %SR% in
 	  parser, but ignored the draw engine. If any of these parameters
-	  not are default a warning is issued.
+	  not are default a warning is issued. Closed a feature request.
 
 2002-10-30  Anders Eriksson  <anders@umunet.org>
 
